Fix button getting stucked on hover opacity while on mobile view

--- a/packages/core-web/src/styles/scroll-top-button.css
+++ b/packages/core-web/src/styles/scroll-top-button.css
@@ -12,8 +12,10 @@
     opacity: 20%;
 }
 
-#scroll-top-button:hover {
-    opacity: 70%;
+@media (hover: hover) {
+    #scroll-top-button:hover {
+        opacity: 70%;
+    }
 }
 
 #scroll-top-button:active {
